--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,14 +51,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BackButtonAndroidScript.cs" />
      <Compile Include="Assets\Scripts\BGPositionScript.cs" />
      <Compile Include="Assets\Scripts\BossBehaviour.cs" />
      <Compile Include="Assets\Scripts\BossSpawner.cs" />
      <Compile Include="Assets\Scripts\CoinKeeper.cs" />
+     <Compile Include="Assets\Scripts\DestroyTimer.cs" />
      <Compile Include="Assets\Scripts\DisturbingEnemyBehaviourScript.cs" />
      <Compile Include="Assets\Scripts\EnemyBehaviour.cs" />
      <Compile Include="Assets\Scripts\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\LevelManager.cs" />
+     <Compile Include="Assets\Scripts\MagnetField.cs" />
      <Compile Include="Assets\Scripts\MusicPlayer.cs" />
      <Compile Include="Assets\Scripts\PlayerControler.cs" />
      <Compile Include="Assets\Scripts\Position.cs" />
@@ -71,6 +74,7 @@
      <Compile Include="Assets\Scripts\SweeperSpawnerScript.cs" />
      <Compile Include="Assets\Scripts\TouchInputMovement.cs" />
      <Compile Include="Assets\Scripts\WaveClearUI.cs" />
+     <Compile Include="Assets\Scripts\WaveManagerScript.cs" />
      <Compile Include="Assets\Scripts\WaveObserver.cs" />
  <Reference Include="Vuforia.UnityExtensions.Editor">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/VuforiaSupport/Managed/Editor/Vuforia.UnityExtensions.Editor.dll</HintPath>
